# nocom-backup

./: .gitmodules  CMakeLists.txt  main.cpp  pqxx_extensions.h  serialization.h  shell.nix  tables.h
